--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: network_logger
-description: A new Flutter package project.
-version: 0.0.1
+description: Network logger with well designed user interface to inspect network traffic logs. Included with Dio interceptor.
+version: 0.0.2
 homepage: https://github.com/themisir/flutter-network-logger
 
 environment:
