--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,7 @@ homepage: https://github.com/themisir/flutter-network-logger
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
-  flutter: ">=2.0.1 <3.0.0"
+  flutter: ">=2.0.1"
 
 dependencies:
   dio: ^4.0.0
